[tool.poetry]
name = "lolpop"
version = "v0.1.0-alpha1"
description = "A software engineering framework for machine learning workflows"
authors = ["jordanvolz <jordan.volz@gmail.com>"]
repository = "https://github.com/jordanvolz/lolpop"
#hompage = 
#documentation = 
keywords = ["machine learning", "data science", "mlops"]
license = "Apache-2.0"
packages = [
    {include = "lolpop"},
    ]
#include = ["templates", "cli"]

#should break this out into dependency groups/extras: 
#https://python-poetry.org/docs/pyproject/#:~:text=See-,Dependency%20groups,-for%20a%20more
#https://python-poetry.org/docs/pyproject/#extras
[tool.poetry.dependencies]
python = ">=3.9,<3.11"
google-auth="^2.16.1"
google-auth-oauthlib="^1.0.0"
google-auth-httplib2="^0.1.0" 
google-api-python-client="^2.79.0"
google-cloud-bigquery="^3.10.0"
google-cloud-storage="^2.7.0"
hydra-core="^1.2.0"
joblib="^1.2.0"
mlflow="^2.2.2"
numpy="^1.23.3"
omegaconf="2.2.3"
pandas="^1.4.2"
prefect="^2.6.6"
scikit_learn="1.2.2"
SQLAlchemy="^1.4.37"
xgboost="^1.6.1"
#prefect-dbt="^0.2.6"
dbt-core="^1.3"
dbt-snowflake="^1.3"
#prefect-snowflake="^0.2.2"
pyarrow="^6.0.1"
sweetviz="^2.1.4"
#pandas-profiling="^3.5.0"
dvc="^2.37.0"
dvc-gs="^2.20.0"
deepchecks="^0.13.0"
evidently="^0.2.1"
optuna="^3.0.4"
alibi = {version = "^0.8.0", extras = ["shap"]}
yellowbrick="^1.4"
aif360="^0.5.0"
continual="^2.0.0a51"
ydata-profiling="^4.0.0"
snowflake-sqlalchemy="^1.4.6"
tqdm="^4.64.1"
sdv={version="^1.0.1",optional=true}
metaflow="^2.8.3"
duckdb={version="^0.7.1", optional=true}
databricks-sql-connector={version="^2.5.2", optional=true}
boto3={version="^1.26.89", optional=true}
db-dtypes=={version="^1.1.1", optional=true}
psychopg2={version="^2.9.6", optional=true}
openai="^0.27.6"

[tool.poetry.extras]
duckdb = ["duckdb"]
databricks = ["databricks-sql-connector"]
cli = ["sdv", "openai"]
aws = ["boto3"]
google = ["google-cloud-bigquery", "google-cloud-storage", "db-dtypes"]
redshift = ["psychopg2"]

[tool.poetry.dev-dependencies]
pytest = "^7.2"
faker = "^14.0"

[tool.poetry.scripts]
lolpop = "lolpop.cli.cli:app"

#[tool.poetry.plugins]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
