[tool.poetry]
name = "lolpop"
version = "v0.0.0"
description = "A software engineering framework for machine learning workflows"
authors = ["jordanvolz <jordan.volz@gmail.com>"]
repository = "https://github.com/jordanvolz/lolpop"
homepage = "https://lolpop.readthedocs.io/"
documentation = "https://lolpop.readthedocs.io/"
keywords = ["machine learning", "data science", "mlops"]
license = "Apache-2.0"
packages = [
    {include = "lolpop"},
    ]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyarrow="^14.0.1"
hydra-core="^1.2.0"
joblib="^1.2.0"
numpy="^1.23.3"
omegaconf="2.2.3"
pandas="^1.4.2"
colorama="^0.4"
matplotlib="^3.7.1"
scikit_learn="^1.2.2"
gitpython="^3.1"
anytree="^2.12.1"
google-auth={version="2.16.1", optional=true}
google-auth-oauthlib={version="^1.0.0", optional=true}
google-auth-httplib2={version="^0.1.0", optional=true}
google-api-python-client={version="^2.79.0", optional=true}
google-cloud-bigquery={version="^3.10", optional=true}
google-cloud-storage={version="^2.7.0", optional=true}
mlflow={version="^2.9.2", optional=true}
prefect={version="^2.14.3", optional=true}
prefect-docker={version="^0.3.11", optional=true}
SQLAlchemy="^1.4.37"
xgboost={version="^1.6.1", optional=true}
dbt-core={version="^1.3", optional=true}
dbt-snowflake={version="^1.3", optional=true}
dbt-databricks={version="^1.3", optional=true}
dbt-redshift={version="^1.3", optional=true}
dbt-duckdb={version="^1.3", optional=true}
dbt-bigquery={version="^1.3", optional=true}
sweetviz={version="^2.1.4", optional=true}
dvc={version="^2.37.0", optional=true}
dvc-gs={version="^2.20.0", optional=true}
dvc-s3={version="^2.20.0", optional=true}
dvc-azure={version="^2.20.0", optional=true}
deepchecks={version="^0.13.0", optional=true}
evidently={version="^0.2.1", optional=true}
feature-engine={version="^1.6.1", optional=true}
optuna={version="^3.0.4", optional=true}
alibi = {version = "^0.8.0", extras = ["shap"]}
yellowbrick={version="^1.4", optional=true}
aif360={version="^0.5.0", optional=true}
ydata-profiling={version="^4.0.0", optional=true}
snowflake-sqlalchemy={version="^1.4.6", optional=true}
tqdm={version="^4.64.1", optional=true}
sdv={version="^1.2.0", optional=true}
metaflow={version="^2.8.3", optional=true}
duckdb={version="^0.7.1", optional=true}
databricks-sql-connector={version="^2.5.2", optional=true}
boto3={version="^1.26.76", optional=true}
db-dtypes={version="^1.1.1", optional=true}
psycopg2={version="^2.9.6", optional=true}
openai={version="^0.27.6", optional=true}
cookiecutter={version="^2.1.1", optional=true}
typer={version="^0.7.0", optional=true}
#removed due to conflict w/ dbt-core on jinja2 version
#need resolution of: https://github.com/python-poetry/poetry/issues/6419
#tslumen={version="^0.0.1", optional=true} 
prophet={version="^1.1.3", optional=true}
stumpy={version="^1.11.1", optional=true}
protobuf={version="^4.0", optional=true}

[tool.poetry.extras]
cli = ["typer", "sdv", "openai", "cookiecutter", "openai"]
timeseries = ["tslumen", "stumpy", "prophet"]
aws = ["boto3", "tqdm"]
duckdb = ["duckdb", "tqdm"]
databricks = ["databricks-sql-connector", "tqdm"]
google = ["google-cloud-bigquery", "google-cloud-storage", "db-dtypes", "tqdm", "dvc-gs", "google-auth", "google-auth-oauthlib", "google-auth-httplib2", "google-api-python-client","google-cloud-bigquery","google-cloud-storage"]
redshift = ["psycopg2", "tqdm", "dvc-s3"]
snowflake = ["snowflake-sqlalchemy"]
metaflow = ["metaflow"]
dvc = ["dvc", "dvc-gs", "dvc-s3", "dvc-azure"]
deepchecks=["deepchecks"]
evidently=["evidently"]
optuna=["optuna"]
alibi = ["alibi", "protobuf"]
yellowbrick=["yellowbrick"]
aif360=["aif360"]
ydata-profiling=["ydata-profiling"]
mlflow=["mlflow"]
prefect=["prefect", "prefect-docker"]
scikit_learn=["scikit_learn"]
xgboost=["xgboost"]
dbt-core=["dbt-core", "dbt-snowflake", "dbt-bigquery", "dbt-redshift", "dbt-databricks", "dbt-duckdb"]
sweetviz=["sweetviz"]
feature_engine = ["feature-engine"]


[tool.poetry.dev-dependencies]
pytest = "^7.2"
urllib3 = "<2.0"
faker = "^14.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
markdown = "^3.3.7"
typer-cli = "^0.0.13"

[tool.poetry.scripts]
lolpop = "lolpop.cli.cli:app"

#[tool.poetry.plugins]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
